io-hotmoka-examples/src/main/java/io/hotmoka/tests/errors/inconsistentfromcontract1/Super.java
package io.hotmoka.tests.errors.inconsistentfromcontract1;

import io.takamaka.code.lang.Contract;

public class Super extends Contract {
	public void m() {}
}